7. Making Our Menu dynamic by loading data from the db

--- a/menu/templates/Menu/menudetail.html
+++ b/menu/templates/Menu/menudetail.html
@@ -1,36 +1,20 @@
 {% extends 'base.html' %}  
 {% load static %}  
-{% block content %}       
-      <div class="main-wrap">
+{% block content %}  
+  <div class="main-wrap">
         <div class="cover_1 cover_sm">
           <div class="img_bg" style="background-image: url({% static 'site_static/img/slider-1.jpg' %});" data-stellar-background-ratio="0.5">
             <div class="container">
               <div class="row align-items-center justify-content-center">
                 <div class="col-md-7" data-aos="fade-up">
-                  <h2 class="heading">About The Restaurant</h2>
+                  <h2 class="heading">Restaurant's Menu</h2>
                   <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nemo saepe dolorum dolorem, iste officia voluptates! Sint repudiandae, soluta voluptatem delectus iure, eaque, harum expedita, nisi aliquam magni odio perferendis ipsum!</p>
                 </div>
               </div>
             </div>
           </div>
         </div> <!-- .cover_1 -->
-
-        <div class="section">
-          <div class="container">
-            <div class="row">
-              <div class="col-md-7" data-aos="fade-up">
-                <img src="{% static 'site_static/img/about_1.png' %}" alt="Image placeholder" class="img-fluid">
-              </div>
-              <div class="col-md-5 pl-md-5" data-aos="fade-up" data-aos-delay="200">
-                <h2 class="mb-4">Restaurnts History</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis illo eos cum est adipisci saepe, soluta at. Sint odio unde omnis, laborum architecto eveniet ea tenetur consequuntur. Nihil doloremque perspiciatis, nesciunt voluptatibus harum ipsam aut sit officia recusandae, voluptatem dolor. Recusandae labore ea perspiciatis voluptas, quibusdam voluptates impedit deserunt eligendi.</p>
-                <p>Quos illum eum, provident ratione omnis repellendus modi iure unde ipsum fuga! Autem quos possimus saepe veniam, sed debitis ex eveniet totam, rerum iste animi quod voluptate magnam doloribus recusandae similique officiis facilis. Recusandae quo excepturi qui est rem sunt voluptas, saepe, voluptates asperiores quidem ducimus libero magnam eius ratione.</p>
-               
-              </div>
-            </div>
-          </div>
-        </div> <!-- .section -->
-
+        
         <div class="section">
           <div class="container">
             <div class="row justify-content-center mb-5" data-aos="fade-up">
@@ -122,3 +106,6 @@
         </div> <!-- .section -->
       </div> <!-- .main-wrap -->
 {% endblock content %}  
+  
+
+      
