--- a/menu/templates/Menu/menulist.html
+++ b/menu/templates/Menu/menulist.html
@@ -35,47 +35,21 @@
                 </ul>
                 <div class="tab-content" id="pills-tabContent">
                   <div class="tab-pane fade show active" id="pills-breakfast" role="tabpanel" aria-labelledby="pills-breakfast-tab">
+                    
+                    <!-- .menu-food-item -->
+                    {% for menu in menuList %}
                     <div class="d-block d-md-flex menu-food-item">
                       <div class="text order-1 mb-3">
-                        <h3><a href="#">Warm Spinach Dip &amp; Chips</a></h3>
-                        <p>Spinach and artichokes in a creamy cheese dip with warm tortilla chips &amp; salsa.</p>
+                        <h3><a href="{% url 'menu:menuDetail' menu.slug %}">{{ menu.name }}</a></h3>
+                        <p>{{ menu.description }}</p>
                       </div>
                       <div class="price order-2">
-                        <strong>$10.49</strong>
+                        <strong>${{ menu.price }}</strong>
                       </div>
-                    </div> <!-- .menu-food-item -->
-
-                    <div class="d-block d-md-flex menu-food-item">
-                      <div class="text order-1 mb-3">
-                        <h3><a href="#">Key Wast Machos</a></h3>
-                        <p>Crisp tortilla and plantain chips covered with lightly spiced ground beef, melted cheese, pickled jalapeños, guacamole, sour cream and salsa.</p>
-                      </div>
-                      <div class="price order-2">
-                        <strong>$11.99</strong>
-                      </div>
-                    </div> <!-- .menu-food-item -->
-
-                    <div class="d-block d-md-flex menu-food-item">
-                      <div class="text order-1 mb-3">
-                        <h3><a href="#">Crispy Onions Rings</a></h3>
-                        <p>A heaping mountain of rings, handmade with Panko breading and shredded coconut flakes.</p>
-                      </div>
-                      <div class="price order-2">
-                        <strong>$11.99</strong>
-                      </div>
-                    </div> <!-- .menu-food-item -->
-
-                    <div class="d-block d-md-flex menu-food-item">
-                      <div class="text order-1 mb-3">
-                        <h3><a href="#">Lobster &amp; Shrimp Quesadilla</a></h3>
-                        <p>Lobster and tender shrimp, with onions, sweet peppers, spinach and our three cheese blend. Griddled and served with tomato salsa and sour cream.</p>
-                      </div>
-                      <div class="price order-2">
-                        <strong>$13.99</strong>
-                      </div>
-                    </div> <!-- .menu-food-item -->
-
-
+                    </div> 
+                    {% endfor %}
+                    <!-- .menu-food-item -->
+                    
                   </div>
                   <div class="tab-pane fade" id="pills-lunch" role="tabpanel" aria-labelledby="pills-lunch-tab">
                     
