--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
 
     <!-- Theme Style -->
     <link rel="stylesheet" href="{% static 'site_static/css/style.css' %}">
+    
   </head>
   <body>
     
@@ -36,7 +37,7 @@
           <ul class="list-unstyled">
             <li class="{% if navbar == 'home' %} active {% endif %}"><a href="{% url 'home:homePage' %}">Home</a></li>
             <li class="{% if navbar == 'about' %} active {% endif %}"><a href="{% url 'about:aboutPage' %}">About Us</a></li>
-            <li class="{% if navbar == 'menu' %} active {% endif %}"><a href="{% url 'menu:menuPage' %}">Our Menu</a></li>
+            <li class="{% if navbar == 'menu' %} active {% endif %}"><a href="{% url 'menu:menuList' %}">Our Menu</a></li>
             <li class="{% if navbar == 'blog' %} active {% endif %}"><a href="{% url 'blog:blogPage' %}">Our Blog</a></li>
             <li class="{% if navbar == 'reservation' %} active {% endif %}"><a href="{% url 'reservation:reservationPage' %}">Reserve A Table</a></li>
             <li class="{% if navbar == 'contact' %} active {% endif %}"><a href="{% url 'contact:contactPage' %}">Contact</a></li>
@@ -63,95 +64,8 @@
         </div>
        
       </header> <!-- site-header -->
-      
-      {% block content %} {% endblock content %}
-
-      <footer>
-        <div class="site-footer">
-          <div class="container">
-            <div class="row small-gutters mb-5">
-              <div class="col-md-6 col-lg-3 mb-5" data-aos="fade" data-aos-delay="100">
-                <div class="footer-widget">
-                  <h3>Diner Restaurant</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vel neque, odio illum. Est minima sint minus sunt ducimus.</p>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-3 mb-5" data-aos="fade" data-aos-delay="200">
-                <div class="footer-widget">
-                  <h3>Lunch Service</h3>
-                  <p>Booking from 12:00pm - 1:30pm</p>
-                  <h3>Dinner Service</h3>
-                  <p>Everyday: <br> Booking from 6:00pm - 9:00pm</p>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-3 mb-5" data-aos="fade" data-aos-delay="300">
-                <div class="footer-widget">
-                  <h3>Quick Links</h3>
-                  <ul>
-                    <li><a href="#">Help &amp; Support</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
-                    <li><a href="#">Get in Touch</a></li>
-                    <li><a href="#">Testimonials</a></li>
-                  </ul>
-                </div>
-              </div>
-              <div class="col-md-6 col-lg-3 mb-5" data-aos="fade" data-aos-delay="400">
-                <div class="footer-widget footer-contact-widget">
-
-                  <h3>Subscribe</h3>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                  <form action="" class="form-subscribe mb-5">
-                    <div class="form-group form-field">
-                      <input type="submit" value="Send" class="btn btn-primary">
-                      <input type="text" class="form-control" placeholder="Email">
-                    </div>
-                  </form>
-
-                  <h3>Contact Us</h3>
-                  <p class="contact-email">info@yourdomain.com</p>
-                  <p class="contact-phone">1-444-123-9829</p>
-                  
-                  
-                </div>
-              </div>
-            </div>
-          </div>
-          
-        </div>
-      </footer>
-
-      <div class="site-footer-copyright">
-        <div class="container">
-          <div class="row">
-
-             <p class="footer-text col-md-12"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
-          </div>
-        </div>
-      </div>
-
-    </div>
-
-    <!-- loader -->
-    <div id="loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee"/><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#f4b214"/></svg></div>
-
-    <script src="{% static 'site_static/js/jquery-3.2.1.min.js' %}"></script>
-    <script src="{% static 'site_static/js/jquery-migrate-3.0.1.min.js' %}"></script>
-    <script src="{% static 'site_static/js/popper.min.js' %}"></script>
-    <script src="{% static 'site_static/js/bootstrap.min.js' %}"></script>
-    <script src="{% static 'site_static/js/owl.carousel.min.js' %}"></script>
-    <script src="{% static 'site_static/js/jquery.waypoints.min.js' %}"></script>
-
-    <script src="{% static 'site_static/js/bootstrap-datepicker.js' %}"></script>
-    <script src="{% static 'site_static/js/jquery.timepicker.min.js' %}"></script>
-    <script src="{% static 'site_static/js/jquery.stellar.min.js' %}"></script>
-
-    <script src="{% static 'site_static/js/aos.js' %}"></script>
     
 
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false"></script>
+  {% block content %} {% endblock content %}
 
-    <script src="{% static 'site_static/js/main.js' %}"></script>
-  </body>
-</html>
+  {% block footer %} {% include 'footer.html' %} {% endblock footer %}
